# HardwareMonitorCpp

./: .clang-format  .gitignore  .gitmodules  CLA.md  CMakeLists.txt  LICENSE.md  LICENSING.md  NOTICE.md  README.md  build_common.py  build_console.py  build_lib.py  build_server.py
.github/workflows/: release.yml
console/: CMakeLists.txt  main.cpp
examples/: idimus_hw_dump.cpp
include/idimus_hw/: device.hpp  idimus_hw.hpp  monitor.hpp  reading.hpp  snapshot.hpp  source.hpp  units.hpp
scripts/windows/: setup-pawnio.ps1
src/core/: device.cpp  monitor.cpp  snapshot.cpp
src/platform/: platform_sources.cpp
src/platform/linux/: sysfs.hpp
src/platform/macos/: cf_util.hpp  ioreport.cpp  ioreport.hpp  smc.cpp  smc.hpp
src/platform/windows/: pawnio.cpp  pawnio.hpp  win_util.hpp
src/sources/battery/: linux_battery_source.cpp  linux_battery_source.hpp  mac_battery_source.cpp  mac_battery_source.hpp  win_battery_source.cpp  win_battery_source.hpp
src/sources/cpu/: linux_cpu_source.cpp  linux_cpu_source.hpp  mac_cpu_source.cpp  mac_cpu_source.hpp  win_cpu_source.cpp  win_cpu_source.hpp
src/sources/gpu/: adl.cpp  adl.hpp  amd_gpu_source.cpp  amd_gpu_source.hpp  igcl.cpp  igcl.hpp  intel_gpu_source.cpp  intel_gpu_source.hpp  linux_drm_gpu_source.cpp  linux_drm_gpu_source.hpp  mac_gpu_source.cpp  mac_gpu_source.hpp  nvidia_gpu_source.cpp  nvidia_gpu_source.hpp  nvml.cpp  nvml.hpp  win_gpu_source.cpp  win_gpu_source.hpp
src/sources/memory/: linux_memory_source.cpp  linux_memory_source.hpp  mac_memory_source.cpp  mac_memory_source.hpp  win_memory_source.cpp  win_memory_source.hpp
src/sources/network/: linux_network_source.cpp  linux_network_source.hpp  mac_network_source.cpp  mac_network_source.hpp  win_network_source.cpp  win_network_source.hpp
src/sources/storage/: linux_storage_source.cpp  linux_storage_source.hpp  mac_storage_source.cpp  mac_storage_source.hpp  win_storage_source.cpp  win_storage_source.hpp
webserver/: CMakeLists.txt  binding.cpp  idimus_server.py
webserver/web/: index.html
